[project]
name = "short-url"
version = "0.1.0"
description = ""
authors = [
    {name = "flyingsock",email = "<voodoo.people.magic@gmail.com>"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "fastapi (>=0.122.0,<0.123.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
